--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -198,9 +198,30 @@
                             </div>
                         </div>
                         <div class="col-auto">
-                            <button type="submit" class="btn btn-outline-light mb-4">
+                            <button type="button" class="btn btn-outline-light mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 Suscribite!! 
                             </button>
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title tituloModal" id="exampleModalLabel">Esta funcion no esta disponible actualmente.</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p class="parrafoModal"> Podés comunicarte a través de Whatsapp directamente. <br> Disculpas por las molestias causadas. <br> Gracias! </p> 
+                                        </div>
+                                        <div class="modal-footer d-flex justify-content-center">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                            <button type="button" class="btn botonModalWhatsapp">
+                                                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
+                                                    <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonModalWhatsapp">
+                                                </a>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </form>
